Added google site verification in index html page

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="/betbaba_logo_file_v2_png.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="google-site-verification"
+      content="3iHt70mfd9RdhY5sBr-_g3TZnXUsF95uO6Q-wFzg9-U"
+    />
     <title>Betbaba-Blog</title>
   </head>
   <body>
