Google Analytics Tag for SEO

--- a/index.html
+++ b/index.html
@@ -12,6 +12,20 @@
       name="google-site-verification"
       content="3iHt70mfd9RdhY5sBr-_g3TZnXUsF95uO6Q-wFzg9-U"
     />
+    <!-- Google tag (gtag.js) -->
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-7VS8NJ96CK"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
+
+      gtag("config", "G-7VS8NJ96CK");
+    </script>
     <title>Betbaba-Blog</title>
   </head>
   <body>
